# CAA-Auditor

./: .gitignore  .python-version  Architecture.md  README.md  abstractions.py  audit_result.py  audit_runner.py  audit_task.py  ia_item.py  index_schema.py  json_parser.py  json_parser_builtin.py  json_parser_cysimdjson.py  main.py  progress.py  pyproject.toml  result_aggregator.py  transform_data.py
scripts/: extract_data.py  generate_actionable_results.py  get_darkened.py  prep_for_ia.py  transform_old_task_list.py
