[tool.poetry]
name = "caa_audit"
version = "0.1.0"
description = ""
authors = ["Ruben Opdebeeck <ropdebee@vub.be>"]
license = "GPL-2.0"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
backoff = "^1.10.0"
loguru = "^0.5.3"
aiopath = "^0.5.0"
attr = "^0.3.1"
pendulum = "^2.1.2"
enlighten = "^1.9.0"
tabulate = "^0.8.9"
click = "^7.1.2"
async-property = "^0.2.1"
tqdm = "^4.60.0"
mbdata = "^25.0.4"
SQLAlchemy = "^1.4.7"
aiofile = "^3.5.0"
aiofiles = "^0.6.0"
cchardet = "^2.1.7"
brotlipy = "^0.7.0"
cysimdjson = "^21.4a4"

[tool.poetry.dev-dependencies]
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
